--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 	<div class="test1">
 		<p>
-			This a demo of box model try to replucate this box model in Html and Css and try to pass all the test cases
+			This a demo of box model try to replucate this box model in Html and Css and try to pass all the test cases.
 		</p>
 	</div>
 </body>
