--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<div class="test1">
-		<p>
-			This a demo of box model try to replucate this box model in Html and Css and try to pass all the test cases.
-		</p>
+		
+			This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.
+		
 	</div>
 </body>
 
